@@ -5,6 +5,8 @@ documents those changes that are of interest to users and admins.
 =========================
  -- Permit SPANK plugins to dynamically register options at runtime base upon
     configuration or other runtime checks.
+ -- Add "include" keywork to SPANK plugstack.conf file to optionally include
+    other configuration files or directories of configuration files.
 
 * Changes in SLURM 1.2.34
 =========================
